--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -1,7 +1,10 @@
 #root {
-  max-width: 1280px;
+  display:flex;
+  flex-direction: column;
+  width: 100vw;
   margin: 0 auto;
-  padding: 2rem;
+  justify-content: center;
+  /* padding: 2rem; */
   text-align: center;
 }
 
