--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -2,10 +2,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  width: 100vw;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #85c977;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,6 +14,78 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+
+* {
+  margin: 0;
+  color: #333;
+}
+.navbar {
+  display: flex;
+  align-items:center;
+  width: 100vw;
+  background-color: teal;
+}
+
+.navbar h1 {
+  display: flex;
+  padding: 20px;
+  color: #35cbf1;
+  font-size: 3.5em;
+  font-kerning: 200%;
+}
+.navbar .links {
+  padding:20px;
+  margin-left: auto;
+}
+.navbar a {
+  margin-left: auto;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: #f1356d;
+}
+
+.footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  padding: 20px;
+  text-align: center;
+}
+
+.footer img {
+  height: 40px;
+  filter:grayscale() opacity(50%);
+  margin: auto;
+  padding: 0 40px 0 40px;
+}
+
+
+.content {
+  display: flex;
+  flex-direction: column;
+  max-width: 600px;
+  margin: auto;
+  padding: 1em;
+}
+
+.content h2 {
+  padding: 2em;
+}
+
+.resume {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+/* html {
+  display: flex;
+  width: 100%;
+  height: 100%;
+} */
 
 a {
   font-weight: 500;
@@ -23,17 +96,14 @@ a:hover {
   color: #535bf2;
 }
 
+
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  width: 100%;
+  height: 100%;
 }
 
 button {
