--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -61,7 +61,7 @@ body{
   position: relative;
   left: 0;
   bottom: 0;
-  padding: 20px;
+  padding: 0 0 0 20px;
   text-align: center;
 }
 
@@ -88,16 +88,43 @@ body{
 
 /*----------------------------- */
 
-.resume {
+.resume-content{
   display: flex;
   flex-direction: column;
   align-items: start;
   place-items: center;
+  margin: 2em;
+}
+
+.resume-container{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  place-items: center;
+  margin: 0 0 2em 0;
 }
 
 .resume-ul {
   list-style: none;
   padding: 0;
+}
+
+.resume-il {
+  display:flex;
+  align-items: start;
+}
+
+.download {
+ padding: 0 0 1em 0;
+}
+
+/*----------------------------- */
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin: 2em 4em 2em 4em;
 }
 
 /*----------------------------- */
@@ -111,11 +138,27 @@ a:hover {
   color: #535bf2;
 }
 
+h2{
+  padding: 0 0 1em 0;
+}
+
+input {
+  display: flex;
+  width: 90vw;
+  max-width: 500px;
+}
+
+textarea {
+  display: flex;
+  width: 90vw;
+  max-width: 500px;
+}
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid;
   padding: 0.6em 1.2em;
+  margin: 0.8em 0 0 0;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
