added project image folder and tied it to project cards

--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -88,6 +88,30 @@ body{
 
 /*----------------------------- */
 
+.project-container {
+  display: flexbox;
+  margin:2em;
+  max-width: 300px;
+  min-width: 200px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.project-card {
+  padding: 2em;
+  margin: 2em;
+  background-color: #35cbf1;
+}
+
+.project-card img {
+  height: 40px;
+  filter:grayscale() opacity(50%);
+  margin: auto;
+}
+
+/*----------------------------- */
+
 .resume-content{
   display: flex;
   flex-direction: column;
