--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -1,205 +1,11 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  width: 100vw;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #85c977;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-* {
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   margin: 0;
-  color: #333;
+  overflow-x: hidden;
 }
 
-/*----------------------------- */
-
-/* #navbar {
-  display: flex;
-  align-items:center;
-  background-color: teal;
-} */
-
-/* #navbar h1 {
-  display: flex;
-
-  color: #35cbf1;
-  font-size: 3.5em;
-  font-kerning: 200%;
-} */
-/* #navbar .links {
-  padding:20px;
-  margin-left: auto;
-}
-#navbar a {
-  margin-left: auto;
-  text-decoration: none;
-  padding: 6px;
-}
-#navbar a:hover {
-  color: #f1356d;
-} */
-
-/*----------------------------- */
-
-.footer {
-  position: relative;
-  left: 0;
-  bottom: 0;
-  padding: 0 0 0 20px;
-  text-align: center;
-}
-
-.footer img {
-  height: 40px;
-  filter:grayscale() opacity(50%);
-  margin: auto;
-  padding: 0 40px 0 40px;
-}
-
-/*----------------------------- */
-
-.content {
-  display: flex;
-  flex-direction: column;
-  max-width: 600px;
-  margin: auto;
-  padding: 1em;
-}
-
-.content h2 {
-  padding: 2em;
-}
-
-/*----------------------------- */
-
-.project-container {
-  display: flexbox;
-  margin:2em;
-  max-width: 300px;
-  min-width: 200px;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.project-card {
-  padding: 2em;
-  margin: 2em;
-  background-color: #35cbf1;
-}
-
-.project-card img {
-  height: 40px;
-  filter:grayscale() opacity(50%);
-  margin: auto;
-}
-
-/*----------------------------- */
-
-.resume-content{
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  place-items: center;
-  margin: 2em;
-}
-
-.resume-container{
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  place-items: center;
-  margin: 0 0 2em 0;
-}
-
-.resume-ul {
-  list-style: none;
-  padding: 0;
-}
-
-.resume-il {
-  display:flex;
-  align-items: start;
-}
-
-.download {
- padding: 0 0 1em 0;
-}
-
-/*----------------------------- */
-
-.contact-form {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  margin: 2em 4em 2em 4em;
-}
-
-/*----------------------------- */
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-h2{
-  padding: 0 0 1em 0;
-}
-
-input {
-  display: flex;
-  width: 90vw;
-  max-width: 500px;
-}
-
-textarea {
-  display: flex;
-  width: 90vw;
-  max-width: 500px;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid;
-  padding: 0.6em 1.2em;
-  margin: 0.8em 0 0 0;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.aboutme{
+  flex-grow: 1;
 }
