--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -20,3 +20,13 @@ body {
   flex-grow: 1;
 }
 
+#contactform{
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+h3 {
+  margin: 0.5em 0 0.5em 0;
+}
+
