--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -3,7 +3,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
-  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 #root{
@@ -11,7 +11,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
-  overflow-x: hidden;
+
 }
 
 #aboutme{
