--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,24 @@ body {
   flex-grow: 1;
 }
 
+/* ------------------------------------------- */
+
+#homepage{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#home-text{
+  text-align: center;
+}
+
+#portrait{
+    -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+}
+
+
+
 /* ------------------------------------------- */ 
 
 #contactform{
